fixed calendar updating on mobile

--- a/src/styles/css/index.css
+++ b/src/styles/css/index.css
@@ -1,7 +1,7 @@
 .app {
   display: flex;
   flex-direction: column;
-  height: 100vh;
+  height: 100%;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale; }
 
